@@ -48,7 +48,7 @@ pass in a string scalar as a pointer / size buffer pair.
 my @stack;
 
 *arguments_set_size_t
-  = FFI::Platypus->new( api => 1, experimental => 1 )->sizeof('size_t') == 4
+  = FFI::Platypus->new( api => 1 )->sizeof('size_t') == 4
   ? \&arguments_set_uint32
   : \&arguments_set_uint64;
 
