@@ -15,7 +15,7 @@ foreach my $api (0, 1)
       warn $message;
     };
 
-    my $ffi = FFI::Platypus->new( api => $api, experimental => 1 );
+    my $ffi = FFI::Platypus->new( api => $api );
     $ffi->lib(find_lib lib => 'test', symbol => 'f0', libpath => 't/ffi');
     $ffi->type('uint8 *' => 'uint8_p');
     $ffi->type('uint8 [10]' => 'uint8_a');
@@ -100,7 +100,7 @@ subtest 'object' => sub {
 
   { package Roger }
 
-  my $ffi = FFI::Platypus->new( api => 1, experimental => 1 );
+  my $ffi = FFI::Platypus->new( api => 1 );
   $ffi->type('object(Roger,uint8)', 'roger_t');
 
   my $int = 211;
