@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - api = 1 is no longer experimental (gh#193)
 
 0.99_01   2019-10-14 14:39:18 -0600
   - Convert documentation from api => 0 (implicit) to api => 1 (explicit)
